<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">


    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="66.6"
        android:gravity="center"
        android:text="@string/item"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_dark" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3">

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/quantity"
            android:textColor="@android:color/primary_text_dark" />

        <TextView
            android:id="@+id/tvIsTaxed"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center"
            android:textColor="@android:color/primary_text_dark" />
    </LinearLayout>


</LinearLayout>