<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/svItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tfItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/itemHintText"
                    android:inputType="textPersonName" />

                <Spinner
                    android:id="@+id/spQuantity"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="1 2 3 4 5 6 7 8 9 10" />

                <EditText
                    android:id="@+id/tfPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/priceHintText"
                    android:inputType="numberDecimal" />

            </LinearLayout>

            <Button
                android:id="@+id/btnAddItem"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="256dp"
                android:layout_marginEnd="64dp"
                android:layout_weight="1"
                android:text="@string/btnAddItemText" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnCalculateText"
        app:layout_constraintBottom_toBottomOf="@+id/svItems"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>